[package]
name = "readwriteseekfs"
version = "0.1.0"
authors = ["Vitaly \"_Vi\" Shukela <vi0oss@gmail.com>"]
description = "Expose Read+Write+Seek (or just Read+Seek) as a FUSE-backed regular file"
readme = "README.md"
keywords = ["fuse", "filesystem", "read", "write", "seek"]

[dependencies]
fuse = "0.3.0"
time = "0.1"
libc = "0.2"
